--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
-<header>
-	<a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+<header class="site-header">
+	<h1>{{ .Site.Title }}</h1>
 	{{ with .Site.Menus.main }}
 	<nav>
 		<ul>
