--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,18 +1,28 @@
 {{ define "main" }}
 	<main>
-		<article>
-			<h1>{{ .Title }}</h1>
-			<time>{{ .Date.Format "02.01.2006 15:04" }}</time>
+		<article class="post">
+			<h1 class="title">{{ .Title }}</h1>
+			<div class="article-details">
+				<time>{{ .Date.Format "Mon Jan 2 2006" }}</time>
+				{{ if .Params.categories }}
+					in
+					<a
+						href="{{ "/categories/" | relLangURL }}{{ .Params.categories | urlize }}"
+						>{{ .Params.categories }}</a
+					>
+				{{ end }}
+				</div>
 			<div>
 				{{ .Content }}
 			</div>
 			{{ with .Params.tags }}
-			<div>
-				<ul id="tags">
-					{{ range . }}
-					<li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>
-					{{ end }}
-				</ul>
+			<div class="tags">
+				[ Tags:
+				{{ range . }}
+					<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}"
+						>#{{ . }}</a
+					>
+				{{ end }} ]
 			</div>
 			{{ end }}
 			{{ with .Site.DisqusShortname }}
