--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,9 +1,9 @@
-<div>
+<div class="pagination">
 {{ if .Paginator.HasPrev }}
-	<a href="{{ .Paginator.Prev.URL }}">Previous Page</a>
+	<a class="button" href="{{ .Paginator.Prev.URL }}" aria-labelledby="Previous Page">&#x2039;</a>
 {{ end }}
 {{ .Paginator.PageNumber }} of {{ .Paginator.TotalPages }}
 {{ if .Paginator.HasNext }}
-	<a href="{{ .Paginator.Next.URL }}">Next Page</a>
+	<a class="button" href="{{ .Paginator.Next.URL }}" aria-labelledby="Next Page">&#x203A;</a>
 {{ end }}
 </div>
