--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,12 +25,8 @@
 				{{ end }} ]
 			</div>
 			{{ end }}
-			{{ with .Site.DisqusShortname }}
-			<div>
-				{{ template "_internal/disqus.html" . }}
-			</div>
-			{{ end }}
 		</article>
+	{{ partial "comments.html" . }}
 	</main>
 {{ partial "sidebar.html" . }}
 {{ end }}
