enableTOC frontmatter adds a table of content

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,5 +16,6 @@
 	{{ partial "header" . }}
 	{{ block "main" . }}{{ end }}
 	{{ partial "footer" . }}
+	<script src="{{ "js/theme.js" | relURL }}"></script>
 </body>
 </html>
