--- a/static/css/style.css
+++ b/static/css/style.css
@@ -161,6 +161,39 @@ footer {
   font-size: smaller;
 }
 
+/* Table of Contents */
+#TableOfContents > ul::before {
+  content: "Table of Contents";
+  font-weight: bold;
+  text-align: center;
+  display: block;
+  margin-left: -1.25em;
+}
+
+#TableOfContents > ul {
+  background-color: #f6f8fa;
+  border: 1px dashed gray;
+  padding: 0.75em 0.75em 0.75em 2em;
+}
+
+#TableOfContents .active {
+  color: #00b;
+}
+
+@media (min-width: 80em) {
+  #TableOfContents {
+    display: block;
+    width: calc(50vw - 29em);
+    max-width: 20em;
+    position: -webkit-sticky;
+    position: sticky;
+    height: 0;
+    top: 3.5em;
+    margin-left: 52em;
+    background: none;
+  }
+}
+
 /* Misc */
 
 .article-details {
