--- a/static/css/style.css
+++ b/static/css/style.css
@@ -199,3 +199,18 @@ footer {
 .article-details {
   font-size: smaller;
 }
+
+.code-play-button {
+  position: relative;
+}
+
+.code-play-button a {
+  position: absolute;
+  text-decoration: none;
+  right: 0em;
+  width: 1.25em;
+  display: inline-block;
+  font-size: 1.5em;
+  color: white;
+  content: "\25B6";
+}
