--- a/layouts/shortcodes/godbolt.html
+++ b/layouts/shortcodes/godbolt.html
@@ -1,6 +1,7 @@
 <!-- Inspired from https://www.foonathan.net/2021/05/hugo-godbolt/ -->
 
 {{ $source        := .Inner | replaceRE "(?ms:^```[^\n]*\n(.*)```$)" "$1" }}
+{{ $source        := default $source (index .Page.Params (.Get "code_from_param")) }}
 {{ $full_source   := trim ($source | replaceRE "//({|})\\n" "") "\n" }}
 
 {{ $language    := findRE "^\n*```(.*)\n" .Inner 1 | default (slice "```") }}
@@ -8,7 +9,7 @@
 {{ $language    := default $language (.Get "language") }}
 {{ $language    := replace $language "cpp" "c++" }}
 
-{{ $default_compilers := dict "c++" "g121" "cpp" "g121" "rust" "r1620" "clang" "clang1400" }}
+{{ $default_compilers := dict "c++" "g121" "cpp" "g121" "rust" "r1620" "clang" "clang1400" "gcc" "g121" "msvc" "vcpp_v19_latest_x64"}}
 {{ $_compiler   := index $default_compilers $language }}
 {{ $_compiler   := default $_compiler (index $default_compilers (.Get "compiler_type" | default "")) }}
 {{ $_compiler   := default $_compiler (.Get "compiler" | default "") }}
@@ -16,11 +17,16 @@
 {{ $lexy        := dict "id" "lexy" "version" "trunk" }}
 {{ $fmt         := dict "id" "fmt" "version" "trunk" }}
 {{ $compiler    := dict "id" $_compiler "options" $options }}
-{{ $executor    := dict "compiler" $compiler }}
+{{ $arguments   := .Get "arguments" }}
+{{ $executor    := dict "compiler" $compiler "arguments" $arguments "compilerOutputVisible" "true" }}
 {{ $session     := dict "id" 1 "language" $language "source" $full_source "compilers" (slice $compiler) "executors" (slice $executor) }}
 {{ $clientstate := dict "sessions" (slice $session) }}
 
 {{ $clientstate_b64 := replace ($clientstate | jsonify | base64Encode) "/" "%2F" }}
+
+{{ if .Get "url_only" }}
+https://godbolt.org/clientstate/{{ $clientstate_b64 }}
+{{ else }}
 
 <div class="code-play-button">
 <a href="https://godbolt.org/clientstate/{{ $clientstate_b64 }}" target="_blank">&#x25B6;</a>
@@ -33,3 +39,5 @@
     {{ end }}
 {{ end }}
 {{ highlight (delimit $display_code "\n") $language "" }}
+
+{{ end }}
